fix: Blurry image

--- a/assets/css/custom-css/headerNew.css
+++ b/assets/css/custom-css/headerNew.css
@@ -24,6 +24,10 @@ header {
   border-bottom: 2px solid #03100d;
 }
 
+.navbar-nav {
+  gap: 16px;
+}
+
 .tab-content-menu a {
   color: #03100d;
   text-decoration: none;
@@ -87,7 +91,6 @@ a:hover.primary-background {
 
 .secondary-background {
   background: #e6ebf1;
-  /* color: #ffffff; */
 }
 
 .primary-text-color {
